fixed postion inssue on header on mobile view

--- a/src/ui/Header.module.css
+++ b/src/ui/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  position: absolute;
+  position: fixed;
   bottom: 15px;
   right: 0;
   z-index: 12;
